--- a/package.json
+++ b/package.json
@@ -3,16 +3,17 @@
   "version": "1.0.0",
   "description": "CSS compiler for the Godbound system",
   "scripts": {
-    "build": "sass src/scss/foundry-godbound.scss css/foundry-godbound.css --style=expanded --no-source-map",
+    "build": "sass src/scss/foundry-godbound.scss css/foundry-godbound.css --style=expanded --no-source-map && npx tailwindcss -i src/foundry-tailwind.css -o css/foundry-godbound-extra.css ",
     "watch": "sass src/scss/foundry-godbound.scss css/foundry-godbound.css --style=expanded --source-map --watch"
   },
   "browserslist": [
     "last 3 versions"
   ],
-  "author": "Asacolips",
+  "author": "jlgcosio",
   "license": "MIT",
   "private": true,
   "devDependencies": {
-    "sass": "^1.53.0"
+    "sass": "^1.53.0",
+    "tailwindcss": "^3.4.1"
   }
 }
